# ESP32-S3-Touch-LCD-1.54

examples/ESP32-S3-LCD-1.54-demo/Arduino-3.2.0/examples/02_button_example/: 02_button_example.ino
examples/ESP32-S3-LCD-1.54-demo/Arduino-3.2.0/examples/03_qmi8658_example/: 03_qmi8658_example.ino
examples/ESP32-S3-LCD-1.54-demo/Arduino-3.2.0/examples/04_gfx_helloworld/: 04_gfx_helloworld.ino
examples/ESP32-S3-LCD-1.54-demo/Arduino-3.2.0/examples/06_gfx_u8g2_font/: 06_gfx_u8g2_font.ino
examples/ESP32-S3-LCD-1.54-demo/ESP-IDF-5.5.1/01_factory/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/ESP32-S3-LCD-1.54-demo/ESP-IDF-5.5.1/02_button_example/: CMakeLists.txt  sdkconfig.old
examples/ESP32-S3-LCD-1.54-demo/ESP-IDF-5.5.1/03_qmi8658_example/: sdkconfig
examples/ESP32-S3-LCD-1.54-demo/ESP-IDF-5.5.1/04_sd_card_test/: sdkconfig  sdkconfig.old
examples/ESP32-S3-Touch-LCD-1.54-demo/ESP-IDF-5.5.1/01_factory/: sdkconfig.old
examples/ESP32-S3-Touch-LCD-1.54-demo/ESP-IDF-5.5.1/03_qmi8658_example/: sdkconfig.old
examples/ESP32-S3-Touch-LCD-1.54-demo/ESP-IDF-5.5.1/05_lvgl_example/: sdkconfig  sdkconfig.defaults
examples/ESP32-S3-Touch-LCD-1.54-demo/ESP-IDF-5.5.1/06_esp-brookesia/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/ESP32-S3-Touch-LCD-1.54-demo/ESP-IDF-5.5.1/06_esp-brookesia/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/ESP32-S3-Touch-LCD-1.54-demo/ESP-IDF-5.5.1/06_esp-brookesia/main/dark/: app_launcher_data.hpp  core_data.hpp  gesture_data.hpp  navigation_bar_data.hpp  recents_screen_data.hpp  scr_bg.c  status_bar_data.hpp  stylesheet.hpp
(+51 files in other folders)
